syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";
import "Basic.proto";
import "Fonts.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message FormFieldTypes {
  int32 enum_value = 1;
}

message ComboBoxField{
  repeated string options = 1;
  int32 selected_index = 2;
}


message CheckBoxField{
  bool BooleanValue = 1;
}

message TextField {}

message UnknownField {}

message FormField{
  int32  annotation_index = 1;
  string name = 2;
  int32 page_index = 3;
  bool read_only = 4; //in c# we need to call GetFormFieldIsReadOnly but in protobuf server must call this value when form field object was created
  FormFieldTypes type = 5;
  string value = 6;
  double width = 7;
  double height = 8;
  double x = 9;
  double y = 10;
  oneof sub_type {
    ComboBoxField combo_box_field = 11;
    CheckBoxField check_box_field = 12;
    TextField text_field = 13;
    UnknownField unknown_field = 14;
  }
}

message PdfForm{
  repeated FormField form_fields = 1;
}

message GetFormRequest{
  PdfDocument document = 1;
}

message GetFormResult{
  oneof result_or_exception {
    PdfForm result = 1;
    RemoteException exception = 2;
  }
}

message RenameFieldRequest{
  PdfDocument document = 1;
  string current_field_name = 2;
  string new_field_name = 3;
}

message SetFromFieldValueRequest{
  PdfDocument document = 1;
  string field_name = 2;
  string form_field_value = 3;
}

message SetFromFieldFontRequest{
  PdfDocument document = 1;
  string field_name = 2;
  FontType font_type = 3;
  optional int32 font_size = 4;
}

message FlattenFormRequest{
  PdfDocument document = 1;
  repeated int32 page_indexes = 2;
}